🚑 Fix upload previews on mobile

--- a/src/drive/mobile/styles/uploadprogression.styl
+++ b/src/drive/mobile/styles/uploadprogression.styl
@@ -33,9 +33,11 @@
         position absolute
         top 50%
         left 50%
-        max-width 3rem
-        max-height 3rem
         transform translateX(-50%) translateY(-50%)
+        width 3rem
+        height 3rem
+        object-fit cover
+        object-position center
 
 .coz-upload-status-content
     flex auto
